--- a/manifest.yaml
+++ b/manifest.yaml
@@ -5,4 +5,4 @@ author: Voguh
 license: EPL-2.0
 homepage: https://github.com/voguh/unichat-plugin-donathon-timer
 dependencies:
-  - unichat@[1.4.0-rc.7,)
+  - unichat@[1.4.0,)
