feat: donathon timer display and more commands

--- a/.luarc.json
+++ b/.luarc.json
@@ -2,5 +2,9 @@
     "runtime": {
         "version": "Lua 5.4"
     },
-    "workspace.library": ["../.types"]
+    "workspace.checkThirdParty": false,
+    "workspace.library": [
+        "./data",
+        "../.types"
+    ]
 }
