--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,6 +42,16 @@ jobs:
           else
             echo "Manifest version matches tag name."
           fi
+      - name: Prepare Folder to ZIP
+        run: |
+          PLUGIN_NAME="$(echo "$GITHUB_REPOSITORY" | cut -d'/' -f2 | sed -e 's/^unichat-//')"
+          mkdir -p "dist/${PLUGIN_NAME}"
+          cp -r assets "dist/${PLUGIN_NAME}/"
+          cp -r data "dist/${PLUGIN_NAME}/"
+          cp -r widgets "dist/${PLUGIN_NAME}/"
+          cp icon.png "dist/${PLUGIN_NAME}/"
+          cp LICENSE "dist/${PLUGIN_NAME}/"
+          cp manifest.yaml "dist/${PLUGIN_NAME}/"
 
       - name: Create ZIP Archive
         id: prepare_release
@@ -50,8 +60,7 @@ jobs:
           TAG_NAME="${GITHUB_REF#refs/tags/}"
           ZIP_FILE="${PLUGIN_NAME}-${TAG_NAME}.zip"
           echo "Creating ZIP archive: $ZIP_FILE"
-          mkdir -p dist
-          zip -r "dist/$ZIP_FILE" assets data widgets manifest.yaml LICENSE icon.png -x "**/fieldstate.json"
+          zip -r "$ZIP_FILE" "dist" -x "**/fieldstate.json"
 
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
@@ -64,7 +73,7 @@ jobs:
             echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
             gh release create "$TAG_NAME" --prerelease
             echo "Uploading $ZIP_FILE to GitHub Release"
-            gh release upload "$TAG_NAME" "dist/$ZIP_FILE" --clobber
+            gh release upload "$TAG_NAME" "$ZIP_FILE" --clobber
             echo "All files uploaded to GitHub Release successfully."
           else
             echo "GitHub CLI is not installed. Skipping upload to GitHub Release."
