--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,38 +42,38 @@ jobs:
           else
             echo "Manifest version matches tag name."
           fi
+
       - name: Prepare Folder to ZIP
         run: |
-          MANIFEST_NAME="$(yq e '.name' manifest.yaml)"
-          mkdir -p "dist/${MANIFEST_NAME}"
-          cp -r assets "dist/${MANIFEST_NAME}/" || echo "No assets directory to copy."
-          cp -r data "dist/${MANIFEST_NAME}/"
-          cp -r widgets "dist/${MANIFEST_NAME}/" || echo "No widgets directory to copy."
-          cp icon.png "dist/${MANIFEST_NAME}/" || echo "No icon.png file to copy."
-          cp LICENSE "dist/${MANIFEST_NAME}/" || echo "No LICENSE file to copy."
-          cp manifest.yaml "dist/${MANIFEST_NAME}/"
+          PLUGIN_NAME="$(yq e '.name' manifest.yaml)"
+          mkdir -p "dist/${PLUGIN_NAME}"
+          cp -r assets "dist/${PLUGIN_NAME}/" || echo "No assets directory to copy."
+          cp -r data "dist/${PLUGIN_NAME}/"
+          cp -r widgets "dist/${PLUGIN_NAME}/" || echo "No widgets directory to copy."
+          cp icon.png "dist/${PLUGIN_NAME}/" || echo "No icon.png file to copy."
+          cp LICENSE "dist/${PLUGIN_NAME}/" || echo "No LICENSE file to copy."
+          cp manifest.yaml "dist/${PLUGIN_NAME}/"
 
       - name: Create ZIP Archive
         id: prepare_release
         run: |
-          MANIFEST_NAME="$(yq e '.name' manifest.yaml)"
-          MANIFEST_VERSION="$(yq e '.version' manifest.yaml)"
-          ZIP_FILE="${MANIFEST_NAME}-${MANIFEST_VERSION}.zip"
+          PLUGIN_NAME="$(yq e '.name' manifest.yaml)"
+          PLUGIN_VERSION="$(yq e '.version' manifest.yaml)"
+          ZIP_FILE="${PLUGIN_NAME}-${PLUGIN_VERSION}.zip"
           echo "Creating ZIP archive: $ZIP_FILE"
-          cd dist && zip -r "$ZIP_FILE" "${MANIFEST_NAME}" -x "**/fieldstate.json"
+          cd dist && zip -r "$ZIP_FILE" "${PLUGIN_NAME}" -x "**/fieldstate.json"
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
         run: |
-          MANIFEST_NAME="$(yq e '.name' manifest.yaml)"
-          MANIFEST_VERSION="$(yq e '.version' manifest.yaml)"
-          ZIP_FILE="${MANIFEST_NAME}-${MANIFEST_VERSION}.zip"
+          PLUGIN_NAME="$(yq e '.name' manifest.yaml)"
+          PLUGIN_VERSION="$(yq e '.version' manifest.yaml)"
+          ZIP_FILE="${PLUGIN_NAME}-${PLUGIN_VERSION}.zip"
           if [ -n "$(command -v gh)" ]; then
-            echo "Creating GitHub Release for tag $MANIFEST_VERSION"
+            echo "Creating GitHub Release for tag $PLUGIN_VERSION"
             echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
-            gh release create "$MANIFEST_VERSION" --prerelease
+            gh release create "$PLUGIN_VERSION" --prerelease
             echo "Uploading $ZIP_FILE to GitHub Release"
-            gh release upload "$MANIFEST_VERSION" "dist/$ZIP_FILE" --clobber
+            gh release upload "$PLUGIN_VERSION" "dist/$ZIP_FILE" --clobber
             echo "All files uploaded to GitHub Release successfully."
           else
             echo "GitHub CLI is not installed. Skipping upload to GitHub Release."
